EVSRESTAPI-550: load_old_maps test in devreset.sh